--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Potluck of the Minds</title>
+   <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
    <h1> Potluck of the Minds </h1>
