--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>Potluck of the Minds</title>
-   <link rel="stylesheet" href="stylesheets/index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Potluck of the Minds</title>
+    <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 
 <body>
     <script>
-        var countDownDate = new Date("Oct 26, 2018 18:00:00").getTime();
-
+        var d = new Date("Oct 26, 2018 18:00:00");
+        var utc = d.getTime();
+        var countDownDate = new Date(utc);
         // Update the count down every 1 second
         var x = setInterval(function () {
 
