--- a/index.html
+++ b/index.html
@@ -6,40 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Potluck of the Minds</title>
-</head>
-
-<body>
     <script>
-        var countDownDate = new Date("Oct 26, 2018 18:00:00").getTime();
+      var countDownDate = new Date("Oct 26, 2018 18:00:00").getTime();
 
-        // Update the count down every 1 second
-        var x = setInterval(function () {
+      // Update the count down every 1 second
+      var x = setInterval(function () {
 
-            // Get todays date and time
-            var now = new Date().getTime();
+          // Get todays date and time
+          var now = new Date().getTime();
 
-            // Find the distance between now and the count down date
-            var distance = countDownDate - now;
+          // Find the distance between now and the count down date
+          var distance = countDownDate - now;
 
-            // Time calculations for days, hours, minutes and seconds
-            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+          // Time calculations for days, hours, minutes and seconds
+          var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+          var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+          var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+          var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-            // Display the result in the element with id="demo"
-            document.getElementById("counter").innerHTML = days + "d " + hours + "h "
-                + minutes + "m " + seconds + "s ";
+          // Display the result in the element with id="demo"
+          document.getElementById("counter").innerHTML = days + "d " + hours + "h "
+              + minutes + "m " + seconds + "s ";
 
-            // If the count down is finished, write some text 
-            if (distance < 0) {
-                clearInterval(x);
-                document.getElementById("counter").innerHTML = "It Now";
-            }
-        }, 1000);
-    </script>
-    <h1> Potluck of the Minds </h1>
-    <p id="counter"></p>
+          // If the count down is finished, write some text 
+          if (distance < 0) {
+              clearInterval(x);
+              document.getElementById("counter").innerHTML = "It Now";
+          }
+      }, 1000);
+  </script>
+</head>
+<body>
+   <header>
+      <nav>
+         <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+         </ul>
+      </nav>
+      <hr>
+      <h1> Potluck of the Minds </h1>
+   </header>
+   <p id="counter"></p>
 </body>
 
 </html>
