--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
    <title>Potluck of the Minds</title>
    <link rel="stylesheet" href="stylesheets/index.css">
 </head>
+
 <body>
    <header>
       <nav>
@@ -53,7 +54,18 @@
       <hr>
       <h1> Potluck of the Minds </h1>
    </header>
-   <p id="counter"></p>
+
+   <section>
+      <p id="counter"></p>
+   </section>
+   
+   <footer>
+      <h3>RSVP</h3>
+      <ul>
+         <li><img src="images/facebook-square.png"></li>
+         <li><img src="images/meetup.png"></li>
+      </ul>
+   </footer>
 </body>
 
 </html>
