--- a/index.html
+++ b/index.html
@@ -1,71 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Potluck of the Minds</title>
-    <script>
-      var countDownDate = new Date("Oct 26, 2018 18:00:00").getTime();
-
-      // Update the count down every 1 second
-      var x = setInterval(function () {
-
-          // Get todays date and time
-          var now = new Date().getTime();
-
-          // Find the distance between now and the count down date
-          var distance = countDownDate - now;
-
-          // Time calculations for days, hours, minutes and seconds
-          var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-          var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-          var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-          var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-          // Display the result in the element with id="demo"
-          document.getElementById("counter").innerHTML = days + "d " + hours + "h "
-              + minutes + "m " + seconds + "s ";
-
-          // If the count down is finished, write some text 
-          if (distance < 0) {
-              clearInterval(x);
-              document.getElementById("counter").innerHTML = "It Now";
-          }
-      }, 1000);
-  </script>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>Potluck of the Minds</title>
-   <link rel="stylesheet" href="stylesheets/index.css">
-</head>
-
-<body>
-   <header>
-      <nav>
-         <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
-         </ul>
-      </nav>
-      <hr>
-      <h1> Potluck of the Minds </h1>
-   </header>
-
-   <section>
-      <p id="counter"></p>
-   </section>
-   
-   <footer>
-      <h3>RSVP</h3>
-      <ul>
-         <li><img src="images/facebook-square.png"></li>
-         <li><img src="images/meetup.png"></li>
-      </ul>
-   </footer>
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Potluck of the Minds</title>
+        <link rel="stylesheet" href="stylesheets/index.css">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+            <hr>
+            <h1> Potluck of the Minds </h1>
+        </header>
+        <section>
+            <p id="counter"></p>
+        </section>
+        <footer>
+            <h3>RSVP</h3>
+            <ul>
+                <li><img src="images/facebook-square.png"></li>
+                <li><img src="images/meetup.png"></li>
+            </ul>
+        </footer>
+        <script src="./dist/bundle.js"></script>
+    </body>
 </html>
