--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <header>
             <nav>
                 <ul>
-                    <li>Home</li>
+                    <li><a href="/index.html">Home</a></li>
                     <li>About</li>
-                    <li>Contact</li>
+                    <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
             <hr>
