testing deploy branch

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </ul>
             </nav>
             <hr>
-            <h1> Potluck of the Minds </h1>
+            <h1> of the Minds </h1>
         </header>
         <section>
             <p id="counter"></p>
