--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="icon" type="img/x-icon" href="images/favicon.ico">
+        <link rel="stylesheet" href="stylesheet/index.css">
         <title>Potluck of the Minds</title>
-        <link rel="stylesheet" href="stylesheets/index.css">
+       
     </head>
     <body>
         <header>
@@ -20,7 +22,14 @@
             <h1> of the Minds </h1>
         </header>
         <section>
-            <p id="counter"></p>
+          <div class="flexboxContainer">
+            <div class="test darkTurq"></div>
+            <div class="test lightTurq"></div>
+            <div class="test darkRed"></div>
+            <div class="test lightRed"></div>
+            <div class="test purple"></div>
+          </div>
+          <p id="counter"></p>
         </section>
         <footer>
             <h3>RSVP</h3>
@@ -29,6 +38,5 @@
                 <li><img src="images/meetup.png"></li>
             </ul>
         </footer>
-        <script src="./dist/bundle.js"></script>
     </body>
 </html>
