--- a/src/contact.html
+++ b/src/contact.html
@@ -6,23 +6,23 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
         <title>Potluck of the Minds</title>
-        <link rel="stylesheet" href="stylesheets/index.css">
+        <link rel="stylesheet" href="stylesheets/index.scss">
     </head>
     <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li>About</li>
-                    <li><a href="/contact.html">Contact</a></li>
-                </ul>
-            </nav>
-            <hr>
-            <div style="text-align: center">
-                <h1> Potluck of the Minds </h1>
-            </div>
-            <hr>
-        </header>
+      <header>
+        <nav>
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <hr>
+        <div style="text-align: center">
+            <h1> Potluck of the Minds </h1>
+        </div>
+        <hr>
+      </header>
         <section style="text-align: center">
           <h4>Contact Us</h4>
           <form>
@@ -50,6 +50,6 @@
             <li><img src="images/meetup.png"></li>
           </ul>
         </footer>
-       <script src="./dist/bundle.js"></script>
+       <script src="index.js"></script>
     </body>
 </html>
