--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,15 @@
     <link rel="stylesheet" href="./stylesheets/index.scss">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
+    <header class="header">
+      <nav class="navbar">
+        <h2 class="basic_brand"> Potluck of the Minds </h2>
+        <ul class="top_nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <hr>
-      <div style="text-align: center">
-        <h1> Potluck of the Minds </h1>
-      </div>
-      <hr>
     </header>
     <section>
       <div class="flexboxContainer">
@@ -34,7 +30,7 @@
     </section>
     <footer>
       <h3>RSVP</h3>
-      <ul>
+      <ul class="footer">
         <li><img src="images/facebook-square.png"></li>
         <li><img src="images/meetup.png"></li>
       </ul>
