--- a/src/about.html
+++ b/src/about.html
@@ -8,19 +8,15 @@
     <link rel="stylesheet" href="/stylesheets/index.scss">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
+  <header class="header">
+      <nav class="navbar">
+        <h2 class="basic_brand"> Potluck of the Minds </h1>
+        <ul class="top_nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <hr>
-      <div style="text-align: center">
-          <h1> Potluck of the Minds </h1>
-      </div>
-      <hr>
     </header>
     <section>
       <div class="flexboxContainer">
