that is just awful

--- a/src/about.html
+++ b/src/about.html
@@ -8,33 +8,43 @@
     <link rel="stylesheet" href="/stylesheets/index.scss">
   </head>
   <body>
-  <header class="header">
-      <nav class="navbar">
-        <h2 class="basic_brand"> Potluck of the Minds </h1>
-        <ul class="top_nav">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section>
-      <div class="flexboxContainer">
-        <div class="test darkTurq"></div>
-        <div class="test lightTurq"></div>
-        <div class="test darkRed"></div>
-        <div class="test lightRed"></div>
-        <div class="test purple"></div>
+    <div class="container">
+      <header class="header">
+        <nav class="navbar">
+          <h2 class="h2-basic-brand"> Potluck of the Minds </h2>
+          <ul class="ul-top-nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main class="main">
+        <section class="section-spacer">
+      
+        </section>
+        <section class="section-content">
+          <h3>What are these strange visions?</h3>
+        </section>
+    
+        <section class="section-spacer">
+
+        </section>
+        <section class="section-content">
+          <h3>Yar!</h3>
+          <p>Prow scuttle parrel provost Sail ho shrouds spirits boom mizzenmast yardarm. Pinnace holystone mizzenmast quarter crow's nest nipperkin grog yardarm hempen halter furl. Swab barque interloper chantey doubloon starboard grog black jack gangway rutters.</p>
+          <p>Deadlights jack lad schooner scallywag dance the hempen jig carouser broadside cable strike colors. Bring a spring upon her cable holystone blow the man down spanker Shiver me timbers to go on account lookout wherry doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to.</p>
+          <p>Trysail Sail ho Corsair red ensign hulk smartly boom jib rum gangway. Case shot Shiver me timbers gangplank crack Jennys tea cup ballast Blimey lee snow crow's nest rutters. Fluke jib scourge of the seven seas boatswain schooner gaff booty Jack Tar transom spirits.</p>
+        </section>
+      </main>
+    </div>
+    <footer class="footer">
+      <h3 class="footer-elem">RSVP</h3>
+      <div class="footer-elem">
+        <img src="images/facebook-square.png">
+        <img src="images/meetup.png">
       </div>
-      <p id="counter"></p>
-    </section>
-    <footer>
-      <h3>RSVP</h3>
-      <ul>
-        <li><img src="images/facebook-square.png"></li>
-        <li><img src="images/meetup.png"></li>
-      </ul>
     </footer>
+    <script src="index.js"></script>
   </body>
-  <script src="index.js"></script>
 </html>
