--- a/src/index.html
+++ b/src/index.html
@@ -8,33 +8,47 @@
     <link rel="stylesheet" href="./stylesheets/index.scss">
   </head>
   <body>
-    <header class="header">
-      <nav class="navbar">
-        <h2 class="basic_brand"> Potluck of the Minds </h2>
-        <ul class="top_nav">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section>
-      <div class="flexboxContainer">
-        <div class="test darkTurq"></div>
-        <div class="test lightTurq"></div>
-        <div class="test darkRed"></div>
-        <div class="test lightRed"></div>
-        <div class="test purple"></div>
+    <div class="container">
+      <header class="header">
+        <nav class="navbar">
+          <h2 class="h2-basic-brand"> Potluck of the Minds </h2>
+          <ul class="ul-top-nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main class="main">
+        <section class="section-spacer">
+      
+        </section>
+        <section class="section-content">
+          <p id="counter">Loading...</p>
+        </section>
+    
+        <section class="section-spacer">
+
+        </section>
+        <section class="section-content">
+          <h3>Dogs</h3>
+          You have to make those little noises or it won't work. I sincerely wish for you every possible joy life could bring. Once you learn the technique, ohhh! Turn you loose on the world; you become a tiger.
+          Nature is so fantastic, enjoy it. Let it make you happy. Exercising the imagination, experimenting with talents, being creative; these things, to me, are truly the windows to your soul. We spend so much of our life looking - but never seeing. We don't need any guidelines or formats. All we need to do is just let it flow right out of us. Put your feelings into it, your heart, it's your world. Little short strokes.
+          You need to have a very firm paint to do this. La- da- da- da- dah. Just be happy. Let's do it again then, what the heck.
+          There we go. No pressure. Just relax and watch it happen. Do an almighty painting with us.
+          This is gonna be a happy little seascape. Nothing wrong with washing your brush. We don't really know where this goes - and I'm not sure we really care. Maybe there's a happy little bush that lives right there.
+          Let's put some highlights on these little trees. The sun wouldn't forget them. That's a crooked tree. We'll send him to Washington. See there how easy that is. The least little bit can do so much. You can't have light without dark. You can't know happiness unless you've known sorrow. You can create anything that makes you happy.
+          If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. A thin paint will stick to a thick paint. Let's make some happy little clouds in our world. This is the time to get out all your flustrations, much better than kicking the dog around the house or taking it out on your spouse. Let your imagination just wonder around when you're doing these things. Zip. That easy.
+        </section>
+      </main>
+    </div>
+    <footer class="footer">
+      <h3 class="footer-elem">RSVP</h3>
+      <div class="footer-elem">
+        <img src="images/facebook-square.png">
+        <img src="images/meetup.png">
       </div>
-      <p id="counter"></p>
-    </section>
-    <footer>
-      <h3>RSVP</h3>
-      <ul class="footer">
-        <li><img src="images/facebook-square.png"></li>
-        <li><img src="images/meetup.png"></li>
-      </ul>
     </footer>
+    <script src="index.js"></script>
   </body>
-  <script src="index.js"></script>
 </html>
