added cowboy fav back in, cleaned up some rengade sass

--- a/src/contact.html
+++ b/src/contact.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-        <title>Potluck of the Minds</title>
-        <link rel="stylesheet" href="stylesheets/index.scss">
-    </head>
-    <body>
-      <div class="container">
-        <header class="header">
-          <nav class="navbar">
-            <h2 class="h2-basic-brand"> Potluck of the Minds </h2>
-            <ul class="ul-top-nav">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
-        </header>
-        <section style="text-align: center">
-          <h4>Contact Us</h4>
-          <form>
-            <div class="g-recaptcha"
-                data-sitekey="6LdbE3oUAAAAAKgSku57_4DtTeP1FIX5_qkrhTsR"
-                data-callback="onSubmit"
-                data-bind="recaptcha-submit"
-                data-size="invisible">
-            </div>
-            <label for="email">Email</label>
-            <input type="email" required name="email" id="email" aria-autocomplete="email">
-            <br><br>
-            <label for="body">Body of Email</label>
-            <br>
-            <textarea name="body" id="body" rows="4" aria-label="body of email" cols="50">
-            </textarea>
-            <br><br>
-            <button id="recaptcha-submit">Submit</button>
-          </form>
-        </section>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <title>POTM - Contact</title>
+    <link rel="icon" type="img/x-icon" href="./images/favicon.ico">
+    <link rel="stylesheet" href="stylesheets/index.scss">
+  </head>
+  <body>
+    <div class="container">
+      <header class="header">
+        <nav class="navbar">
+          <h2 class="h2-basic-brand"> Potluck of the Minds </h2>
+          <ul class="ul-top-nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+      <section style="text-align: center">
+        <h4>Contact Us</h4>
+        <form>
+          <div class="g-recaptcha"
+              data-sitekey="6LdbE3oUAAAAAKgSku57_4DtTeP1FIX5_qkrhTsR"
+              data-callback="onSubmit"
+              data-bind="recaptcha-submit"
+              data-size="invisible">
+          </div>
+          <label for="email">Email</label>
+          <input type="email" required name="email" id="email" aria-autocomplete="email">
+          <br><br>
+          <label for="body">Body of Email</label>
+          <br>
+          <textarea name="body" id="body" rows="4" aria-label="body of email" cols="50">
+          </textarea>
+          <br><br>
+          <button id="recaptcha-submit">Submit</button>
+        </form>
+      </section>
+    </div>
+    <footer class="footer">
+      <h3 class="footer-elem">RSVP</h3>
+      <div class="footer-elem">
+        <img src="images/facebook-square.png">
+        <img src="images/meetup.png">
       </div>
-      <footer class="footer">
-        <h3 class="footer-elem">RSVP</h3>
-        <div class="footer-elem">
-          <img src="images/facebook-square.png">
-          <img src="images/meetup.png">
-        </div>
-      </footer>
-      <script src="index.js"></script>
-    </body>
+    </footer>
+    <script src="index.js"></script>
+  </body>
 </html>
 
