--- a/src/about.html
+++ b/src/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>POTM - About</title>
+    <link rel="icon" type="img/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="/stylesheets/index.scss">
   </head>
   <body>
