added updated text content to home and about pages

--- a/src/about.html
+++ b/src/about.html
@@ -7,6 +7,8 @@
     <title>POTM - About</title>
     <link rel="icon" type="img/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="/stylesheets/index.scss">
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Open+Sans+Condensed:300|Questrial|Oswald|Raleway" rel="stylesheet">
+
   </head>
   <body>
     <div class="container">
@@ -25,17 +27,19 @@
       
         </section>
         <section class="section-content">
-          <h3>What are these strange visions?</h3>
+          <h3>Why Potluck of the Minds?</h3>
+          <p>The goal of Potluck of the Minds is to bring together those in our community with an urge to teach, learn, and share.</p>
         </section>
     
         <section class="section-spacer">
 
         </section>
         <section class="section-content">
-          <h3>Yar!</h3>
-          <p>Prow scuttle parrel provost Sail ho shrouds spirits boom mizzenmast yardarm. Pinnace holystone mizzenmast quarter crow's nest nipperkin grog yardarm hempen halter furl. Swab barque interloper chantey doubloon starboard grog black jack gangway rutters.</p>
-          <p>Deadlights jack lad schooner scallywag dance the hempen jig carouser broadside cable strike colors. Bring a spring upon her cable holystone blow the man down spanker Shiver me timbers to go on account lookout wherry doubloon chase. Belay yo-ho-ho keelhaul squiffy black spot yardarm spyglass sheet transom heave to.</p>
-          <p>Trysail Sail ho Corsair red ensign hulk smartly boom jib rum gangway. Case shot Shiver me timbers gangplank crack Jennys tea cup ballast Blimey lee snow crow's nest rutters. Fluke jib scourge of the seven seas boatswain schooner gaff booty Jack Tar transom spirits.</p>
+          <h3>Values and Words We Hold Close.</h3>
+          <p>Symposium: "A place to inspire thought and conversation about the abnormal and difficult topics that exist."</p>
+          <p>Enlighten: We strive for our attendees to leave feeling like they learned something new.</p>
+          <p>Community: There are a lot of people in this community with wisdom and knowledge to share. Let's learn from eachother!</p>
+          <p>Don't bring your kids, bring your parents!</p>
         </section>
       </main>
     </div>
@@ -44,6 +48,7 @@
       <div class="footer-elem">
         <img src="images/facebook-square.png">
         <img src="images/meetup.png">
+        <img src="images/insta.png">
       </div>
     </footer>
     <script src="index.js"></script>
