--- a/src/contact.html
+++ b/src/contact.html
@@ -8,6 +8,8 @@
     <title>POTM - Contact</title>
     <link rel="icon" type="img/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="stylesheets/index.scss">
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Open+Sans+Condensed:300|Questrial|Oswald|Raleway" rel="stylesheet">
+
   </head>
   <body>
     <div class="container">
