--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>POTM - Starts Here</title>
     <link rel="icon" type="img/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="./stylesheets/index.scss">
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Open+Sans+Condensed:300|Questrial|Oswald|Raleway" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -24,19 +25,14 @@
         <section class="section-spacer">
         </section>
         <section class="section-content">
+          <h3>Countdown to our first Potluck!</h3>
           <p id="counter">Loading...</p>
         </section>
         <section class="section-spacer">
         </section>
         <section class="section-content">
-          <h3>Dogs</h3>
-          <p>I sincerely wish for you every possible joy life could bring. Once you learn the technique, ohhh! Turn you loose on the world; you become a tiger.</p>
-          <p>Nature is so fantastic, enjoy it. Let it make you happy. Exercising the imagination, experimenting with talents, being creative; these things, to me, are truly the windows to your soul. We spend so much of our life looking - but never seeing. We don't need any guidelines or formats. All we need to do is just let it flow right out of us. Put your feelings into it, your heart, it's your world. Little short strokes.</p>
-          <p>You need to have a very firm paint to do this. La- da- da- da- dah. Just be happy. Let's do it again then, what the heck.</p>
-          <p>There we go. No pressure. Just relax and watch it happen. Do an almighty painting with us.</p>
-          <p>This is gonna be a happy little seascape. Nothing wrong with washing your brush. We don't really know where this goes - and I'm not sure we really care. Maybe there's a happy little bush that lives right there.</p>
-          <p>Let's put some highlights on these little trees. The sun wouldn't forget them. That's a crooked tree. We'll send him to Washington. See there how easy that is. The least little bit can do so much. You can't have light without dark. You can't know happiness unless you've known sorrow. You can create anything that makes you happy.</p>
-          <p>If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. A thin paint will stick to a thick paint. Let's make some happy little clouds in our world. This is the time to get out all your flustrations, much better than kicking the dog around the house or taking it out on your spouse. Let your imagination just wonder around when you're doing these things. Zip. That easy.</p>
+          <h3>What is Potluck of the Minds?</h3>
+          <p>Potluck of the Minds is a community event with the goal of inspiring thought and conversation through engaging topics, presented by our local #missoulaminds.</p>
         </section>
         <section class="section-spacer">
         </section>
@@ -47,6 +43,7 @@
       <div class="footer-elem">
         <img src="images/facebook-square.png">
         <img src="images/meetup.png">
+        <img src="images/insta.png">
       </div>
     </footer>
     <script src="index.js"></script>
