Make those links work. Closes #23.
Added fontawesome.
Got rid of the Meetup link until there is a Meetup scheduled.
Have the links open the social accounts in a new tab.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="img/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="./stylesheets/index.scss">
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Open+Sans+Condensed:300|Questrial|Oswald|Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-LRlmVvLKVApDVGuspQFnRQJjkv0P7/YFrw84YYQtmYG4nK8c+M+NlmYDCv0rKWpG" crossorigin="anonymous">
   </head>
   <body>
     <div class="container">
@@ -40,10 +41,16 @@
     </div>
     <footer class="footer">
       <h3 class="footer-elem">RSVP</h3>
-      <div class="footer-elem">
-        <img src="images/facebook-square.png">
-        <img src="images/meetup.png">
-        <img src="images/insta.png">
+      <div class="footer-elem__social">
+        <a class="social-link" target="_blank" href="https://www.facebook.com/Potluck-Of-The-Minds-479609349226739/">
+          <i class="fab fa-facebook fa-3x"></i>
+        </a>
+        <a class="social-link" target="_blank" href="https://www.instagram.com/potluck_of_the_minds/">
+          <i class="fab fa-instagram fa-3x"></i>
+        </a>
+        <a class="social-link" target="_blank" href="https://twitter.com/potluckMinds">
+          <i class="fab fa-twitter fa-3x"></i>
+        </a>
       </div>
     </footer>
     <script src="index.js"></script>
