--- a/src/index.html
+++ b/src/index.html
@@ -14,28 +14,30 @@
     <div class="container">
       <header class="header">
         <nav class="navbar">
-          <h2 class="h2-basic-brand"> Potluck of the Minds </h2>
+          <h2 class="h2-basic-brand"> POTM </h2>
           <ul class="ul-top-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
-      </header>
-      <main class="main">
-        <section class="section-spacer">
-        </section>
-        <section class="section-content">
-          <h3>Countdown to our first Potluck!</h3>
+        <section class="section-content-header">
+          <h3 class="h3-animated-potm">Potluck Of The Minds</h3>
           <p id="counter">Loading...</p>
         </section>
-        <section class="section-spacer">
-        </section>
-        <section class="section-content">
+      </header>
+      <main class="main">
+        <!-- <section class="section-content">
           <h3>What is Potluck of the Minds?</h3>
           <p>Potluck of the Minds is a community event with the goal of inspiring thought and conversation through engaging topics, presented by our local #missoulaminds.</p>
+        </section>  -->
+        <section class="section-content-articles">
         </section>
-        <section class="section-spacer">
+        <section class="section-content-slider">
+        </section>
+        <section class="section-content-events">
+        </section>
+        <section class="section-content-speakers">
         </section>
       </main>
     </div>
