not finished but you can see where I'm at with the timer

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,11 @@
         </nav>
         <section class="potm-section-content-header">
           <h3 class="potm-h3-animated-potm">Potluck Of The Minds</h3>
-          <p class="potm-meow" id="potm-counter">
-          </p>
+          <span id="potm-counter"></span>
+            <span class="potm-meow-days">days</span>
+            <span class="potm-meow-hours">hours</span>
+            <span class="potm-meow-minutes">minutes</span>
+            <span class="potm-meow-seconds">seconds</span>
         </section>
       </header>
       <main class="potm-main">
