--- a/src/index.html
+++ b/src/index.html
@@ -57,13 +57,13 @@
         <section class="potm-section-content-header">
           <h3 class="potm-h3-animated-potm">Potluck Of The Minds</h3>
           <div class="grid">
-            <div class="time test"><p>28</p></div>
+            <div class="time test"><p id="potm-days">28</p></div>
             <div class="text test"><h2>days</h2></div>
-            <div class="time test"><p>28</p></div>
+            <div class="time test"><p id="potm-hours">28</p></div>
             <div class="text test"><h2>hours</h2></div>
-            <div class="time test"><p>28</p></div>
+            <div class="time test"><p id="potm-minutes">28</p></div>
             <div class="text test"><h2>minutes</h2></div>
-            <div class="time test"><p>28</p></div>
+            <div class="time test"><p id="potm-seconds">28</p></div>
             <div class="text test"><h2>seconds</h2></div>
           </div>
         </section>
