--- a/src/index.html
+++ b/src/index.html
@@ -9,38 +9,6 @@
     <link rel="stylesheet" href="./stylesheets/index.scss">
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Open+Sans+Condensed:300|Questrial|Oswald|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-LRlmVvLKVApDVGuspQFnRQJjkv0P7/YFrw84YYQtmYG4nK8c+M+NlmYDCv0rKWpG" crossorigin="anonymous">
-    <style>
-      .grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, 1fr);
-        grid-auto-rows: 50px;
-        grid-gap: 50px;
-        margin-left:20px;
-      }
-      .test {
-        color: white;
-        text-align: center;
-      }
-      .text {
-        background-color: red;
-      }
-      .text p {
-        font-weight: bold;
-        font-size: 32px;
-      }
-      .time {
-        background-color: blue;
-        opacity: 0.5;
-      }
-      .grid > div:nth-child(1) { grid-column: 1 / 2; grid-row: 1; z-index: 1; }
-      .grid > div:nth-child(2) { grid-column: 1 / 2; grid-row: 1; z-index: 0; }
-      .grid > div:nth-child(3) { grid-column: 2 / 3; grid-row: 1; z-index: 1; }
-      .grid > div:nth-child(4) { grid-column: 2 / 3; grid-row: 1; z-index: 0; }
-      .grid > div:nth-child(5) { grid-column: 3 / 4; grid-row: 1; z-index: 1; }
-      .grid > div:nth-child(6) { grid-column: 3 / 4; grid-row: 1; z-index: 0; }
-      .grid > div:nth-child(7) { grid-column: 4 / 5; grid-row: 1; z-index: 1; }
-      .grid > div:nth-child(8) { grid-column: 4 / 5; grid-row: 1; z-index: 0; }
-    </style>
   </head>
   <body>
     <div class="potm-container">
@@ -57,13 +25,13 @@
         <section class="potm-section-content-header">
           <h3 class="potm-h3-animated-potm">Potluck Of The Minds</h3>
           <div class="grid">
-            <div class="time test"><p id="potm-days">28</p></div>
+            <div class="time test"><p id="potm-days"></p></div>
             <div class="text test"><h2>days</h2></div>
-            <div class="time test"><p id="potm-hours">28</p></div>
+            <div class="time test"><p id="potm-hours"></p></div>
             <div class="text test"><h2>hours</h2></div>
-            <div class="time test"><p id="potm-minutes">28</p></div>
+            <div class="time test"><p id="potm-minutes"></p></div>
             <div class="text test"><h2>minutes</h2></div>
-            <div class="time test"><p id="potm-seconds">28</p></div>
+            <div class="time test"><p id="potm-seconds"></p></div>
             <div class="text test"><h2>seconds</h2></div>
           </div>
         </section>
