refactor on scss, counter still in place

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         </nav>
         <section class="potm-section-content-header">
           <h3 class="potm-h3-animated-potm">Potluck Of The Minds</h3>
-          <div class="grid">
+          <div class="potm-counter-grid">
             <div class="time test"><p id="potm-days"></p></div>
             <div class="text test"><h2>days</h2></div>
             <div class="time test"><p id="potm-hours"></p></div>
