thats as close as I'm going to get at the moment.  Also refactored stylesheets so that things weren't as claustrophic

--- a/src/index.html
+++ b/src/index.html
@@ -25,20 +25,19 @@
         <section class="potm-section-content-header">
           <h3 class="potm-h3-animated-potm">Potluck Of The Minds</h3>
           <div class="potm-counter-grid">
-            <div class="time test"><p id="potm-days"></p></div>
-            <div class="text test"><h2>days</h2></div>
-            <div class="time test"><p id="potm-hours"></p></div>
-            <div class="text test"><h2>hours</h2></div>
-            <div class="time test"><p id="potm-minutes"></p></div>
-            <div class="text test"><h2>minutes</h2></div>
-            <div class="time test"><p id="potm-seconds"></p></div>
-            <div class="text test"><h2>seconds</h2></div>
+            <div class="potm-counter-time potm-counter-box"><p id="potm-days"></p></div>
+            <div class="potm-counter-text potm-counter-box"><h2>days</h2></div>
+            <div class="potm-counter-time potm-counter-box"><p id="potm-hours"></p></div>
+            <div class="potm-counter-text potm-counter-box"><h2>hours</h2></div>
+            <div class="potm-counter-time potm-counter-box"><p id="potm-minutes"></p></div>
+            <div class="potm-counter-text potm-counter-box"><h2>minutes</h2></div>
+            <div class="potm-counter-time potm-counter-box"><p id="potm-seconds"></p></div>
+            <div class="potm-counter-text potm-counter-box"><h2>seconds</h2></div>
           </div>
         </section>
       </header>
       <main class="potm-main">
         <section class="potm-section-content-articles">
-          
         </section>
         <section class="potm-section-content-slider">
         </section>
