--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="test.html">Carousel Test</a></li>
+            <li style="display: none;"><a href="test.html">Carousel Test</a></li>
           </ul>
         </nav>
         <section class="potm-section-content-header">
