--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           </ul>
         </nav>
         <section class="potm-section-content-header">
-          <h3 class="potm-h3-animated-potm">Potluck Of The Minds</h3>
+          <h3 class="potm-h3-animated-potm">POTLUCK OF THE MINDS</h3>
           <div class="potm-counter-grid">
             <div class="potm-counter-time potm-counter-box"><p id="potm-days"></p></div>
             <div class="potm-counter-text potm-counter-box"><h2>days</h2></div>
