--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,26 @@
       </header>
       <main class="potm-main">
         <section class="potm-section-content-articles">
+          <div class='carousel carousel-animated carousel-animate-slide' data-autoplay="true">
+            <div class='carousel-container'>
+              <!-- <div class='carousel-item has-background is-active'>
+              <img class="is-background" src="https://wikiki.github.io/images/merry-christmas.jpg" alt="" width="640" height="310" />
+              <div class="title">Merry Christmas</div>
+              </div> -->
+              <div class='carousel-item has-background'>
+                <img class="is-background" src="./images/cutout.png" alt="no pic" width="640" height="310" />
+                <div class="title">Life</div>
+              </div>
+            </div>
+            <div class="carousel-navigation">
+                <div class="carousel-nav-left">
+                  <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                </div>
+                <div class="carousel-nav-right">
+                  <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </div>
+            </div>
+          </div>
         </section>
         <section class="potm-section-content-slider">
         </section>
