--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,11 @@
     <div class="potm-container">
       <header class="potm-header">
         <nav class="potm-navbar">
-          <h2 class="potm-h2-basic-brand"> POTM </h2>
+          <img class="potm-logo-nav" src="./images/trans-logo.png" alt="">
           <ul class="potm-ul-top-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li style="display: none;"><a href="test.html">Carousel Test</a></li>
           </ul>
         </nav>
         <section class="potm-section-content-header">
