setup listeners for contact form, got lost in patterns for awhile

--- a/src/contact.html
+++ b/src/contact.html
@@ -13,51 +13,65 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">
-        <nav class="navbar">
-          <h2 class="h2-basic-brand"> Potluck of the Minds </h2>
-          <ul class="ul-top-nav">
+      <header class="potm-header">
+        <nav class="potm-navbar">
+          <img class="potm-logo-nav" src="./images/trans-logo.png" alt="">
+          <ul class="potm-ul-top-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
-      <section style="text-align: center">
-        <h4>Contact Us</h4>
+      <main>
         <form>
-          <div class="g-recaptcha"
-              data-sitekey="6LdbE3oUAAAAAKgSku57_4DtTeP1FIX5_qkrhTsR"
-              data-callback="onSubmit"
-              data-bind="recaptcha-submit"
-              data-size="invisible">
+          <div class="field">
+            <label class="label">Email</label>
+            <div class="control has-icons-left has-icons-right">
+              <input id="potm-contact-email" class="input" type="email" placeholder="Email input" value="">
+              <span class="icon is-small is-left">
+                <i class="fas fa-envelope"></i>
+              </span>
+              <span id="ptom-contact-email-icon" class="icon is-small is-right">
+                <i class="ptom-hide fas fa-exclamation-triangle"></i>
+              </span>
+            </div>
+            <p id="potm-contact-email-help" class="help"></p>
           </div>
-          <label for="email">Email</label>
-          <input type="email" required name="email" id="email" aria-autocomplete="email">
-          <br><br>
-          <label for="body">Body of Email</label>
-          <br>
-          <textarea name="body" id="body" rows="4" aria-label="body of email" cols="50">
-          </textarea>
-          <br><br>
-          <button id="recaptcha-submit">Submit</button>
+
+          <div class="field">
+            <label class="label">Message</label>
+            <div class="control">
+              <textarea class="textarea" placeholder="Textarea"></textarea>
+            </div>
+          </div>
+          
+          
+          <div class="field is-grouped">
+            <div class="control">
+              <button class="button is-link">Submit</button>
+            </div>
+            <div class="control">
+              <button class="button is-text">Cancel</button>
+            </div>
+          </div>
         </form>
-      </section>
-    </div>
-    <footer class="footer">
-      <h3 class="footer-elem">RSVP</h3>
-      <div class="footer-elem__social">
-        <a class="social-link" target="_blank" href="https://www.facebook.com/Potluck-Of-The-Minds-479609349226739/">
-          <i class="fab fa-facebook fa-3x"></i>
-        </a>
-        <a class="social-link" target="_blank" href="https://www.instagram.com/potluck_of_the_minds/">
-          <i class="fab fa-instagram fa-3x"></i>
-        </a>
-        <a class="social-link" target="_blank" href="https://twitter.com/potluckMinds">
-          <i class="fab fa-twitter fa-3x"></i>
-        </a>
+      </main>
+      <footer class="potm-footer">
+        <h3 class="potm-footer-elem">RSVP</h3>
+        <div class="potm-footer-elem__social">
+          <a class="social-link" target="_blank" href="https://www.facebook.com/Potluck-Of-The-Minds-479609349226739/">
+            <i class="fab fa-facebook fa-3x"></i>
+          </a>
+          <a class="social-link" target="_blank" href="https://www.instagram.com/potluck_of_the_minds/">
+            <i class="fab fa-instagram fa-3x"></i>
+          </a>
+          <a class="social-link" target="_blank" href="https://twitter.com/potluckMinds">
+            <i class="fab fa-twitter fa-3x"></i>
+          </a>
+        </div>
+      </footer>
       </div>
-    </footer>
     <script src="index.js"></script>
   </body>
 </html>
