made the image of the woman the background for the carousel, now only the text moves.

--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,29 @@
         <section class="potm-section-content-articles">
         </section>
         <section class="potm-section-content-slider">
+            <div class='carousel carousel-animated carousel-animate-slide' data-autoplay="true">
+                <div class='carousel-container'>
+                  <div class='carousel-item'> 
+                    <p class=potm-scs-text1>What is it?</p>
+                    <br>
+                    <p class=potm-scs-text2>We all have passions and ideas. Sometimes we benefit</p>
+                    <p class=potm-scs-text2>by keeping them to ourselves, and sometimes they are brought to life</p> 
+                    <p class=potm-scs-text2>by sharing them with others. This is a time for sharing.</p> 
+                    <p class=potm-scs-text2>Sharing ideas, food and having a beer or two.</p>
+                    <p class=potm-scs-text2>All while supporting those of us who have gained the confidence </p>
+                    <p class=potm-scs-text2>to share their passions and ideas.</p>
+                  </div>
+                  <div class='carousel-item'> 
+                    <p class=potm-scs-text1>Feburary 22nd</p>
+                    <p class=potm-scs-text3>The Pivot:</p>
+                    <p class=potm-scs-text2>There are a lot of ways to pivot, and even more reasons. Why did you?</p>
+                </div>
+            </div>
         </section>
         <section class="hero potm-section-content-events">
           <div class="hero-body">
             <div class="container">
-             
+
             </div>
           </div>
         </section>
