--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,12 @@
             <div class="potm-counter-time potm-counter-box"><p id="potm-seconds"></p></div>
             <div class="potm-counter-text potm-counter-box"><h2>seconds</h2></div>
           </div>
+          <a href="https://www.meetup.com/MissoulaTech/events/258047128/" class="potm-header-rsvp button">RSVP</a>
+          <a href="#potm-content-events">
+            <div class="stroke-187">
+          
+            </div>
+          </a>  
         </section>
       </header>
       <main class="potm-main">
@@ -40,7 +46,7 @@
         </section>
         <section class="potm-section-content-slider">
         </section>
-        <section class="hero potm-section-content-events">
+        <section id="potm-content-events" class="hero potm-section-content-events">
           <div class="hero-body">
             <div class="container">
              
