first round on footer, may need additonal context

--- a/src/index.html
+++ b/src/index.html
@@ -57,9 +57,6 @@
       </main>
     </div>
     <footer class="potm-footer">
-      <a href="https://www.meetup.com/MissoulaTech/events/258047128/">
-        <h3 class="potm-footer-elem">RSVP</h3>
-      </a>
       <div class="potm-footer-elem__social">
         <a class="social-link" target="_blank" href="https://www.facebook.com/Potluck-Of-The-Minds-479609349226739/">
           <i class="fab fa-facebook fa-3x"></i>
@@ -70,6 +67,15 @@
         <a class="social-link" target="_blank" href="https://twitter.com/potluckMinds">
           <i class="fab fa-twitter fa-3x"></i>
         </a>
+      </div>
+      <div class="potm-footer-elem__rsvp">
+          <a class="potm-footer-elem__rsvp__anchor" href="https://www.meetup.com/MissoulaTech/events/258047128/">
+            <h3>RSVP</h3>
+          </a>
+          <p class="potm-footer-elem__rsvp__text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ut, ratione, 
+            facere nihil accusantium reiciendis doloremque at repellat eos fugiat totam reprehenderit, 
+            tenetur culpa? Aperiam quos minus iste aspernatur sunt!
+          </p>
       </div>
     </footer>
     <script src="index.js"></script>
