link to footer adn open new tab on rsvp

--- a/src/index.html
+++ b/src/index.html
@@ -33,10 +33,9 @@
             <div class="potm-counter-time potm-counter-box"><p id="potm-seconds"></p></div>
             <div class="potm-counter-text potm-counter-box"><h2>seconds</h2></div>
           </div>
-          <a href="https://www.meetup.com/MissoulaTech/events/258047128/" class="potm-header-rsvp button">RSVP</a>
-          <a href="#potm-content-events">
+          <a href="https://www.meetup.com/MissoulaTech/events/258047128/" target="_blank" class="potm-header-rsvp button">RSVP</a>
+          <a href="#potm-footer">
             <div class="stroke-187">
-          
             </div>
           </a>  
         </section>
@@ -62,7 +61,7 @@
         </section>
       </main>
     </div>
-    <footer class="potm-footer">
+    <footer id="potm-footer" class="potm-footer">
       <a href="https://www.meetup.com/MissoulaTech/events/258047128/">
         <h3 class="potm-footer-elem">RSVP</h3>
       </a>
