--- a/src/index.html
+++ b/src/index.html
@@ -72,9 +72,8 @@
           <a class="potm-footer-elem__rsvp__anchor" href="https://www.meetup.com/MissoulaTech/events/258047128/">
             <h3>RSVP</h3>
           </a>
-          <p class="potm-footer-elem__rsvp__text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ut, ratione, 
-            facere nihil accusantium reiciendis doloremque at repellat eos fugiat totam reprehenderit, 
-            tenetur culpa? Aperiam quos minus iste aspernatur sunt!
+          <p class="potm-footer-elem__rsvp__text" >
+            Potluck of the Minds is awesome
           </p>
       </div>
     </footer>
