having trouble with adding the section text above the images to section-content-speakers

--- a/src/index.html
+++ b/src/index.html
@@ -70,13 +70,23 @@
             </div>
           </div>
         </section>
-        <section class="hero potm-section-content-speakers">
-          <div class="hero-body">
-            <div class="container">
-
-            </div>
+        <section class="potm-section-content-speakers">
+            <!-- <span class="potm-scs-text4">Most Recent Speakers</span> -->
+          <div class="potm-scs-container">
+          <div class="potm-scs-img-container">
+              <img class="potm-scs-images" src="./images/Kels.jpg"/><span class="potm-scs-image-names">Kelsey Iverson</span>
           </div>
-        </section>
+          <div class="potm-scs-img-container">
+              <img class="potm-scs-images" src="./images/Ed.jpg"/><span class="potm-scs-image-names">Edward Weymouth</span>
+          </div>
+          <div class="potm-scs-img-container">
+              <img class="potm-scs-images" src="./images/Nora.jpg"/><span class="potm-scs-image-names">Nora McDougall-Collins</span>
+          </div>
+          <div class="potm-scs-img-container">
+              <img class="potm-scs-images" src="./images/Kirk.jpg"/><span class="potm-scs-image-names">Kirk Richardson</span>
+          </div>
+        </div>
+        </section>              
       </main>
     </div>
     <footer id="potm-footer" class="potm-footer">
