--- a/src/index.html
+++ b/src/index.html
@@ -71,21 +71,25 @@
           </div>
         </section>
         <section class="potm-section-content-speakers">
-            <!-- <span class="potm-scs-text4">Most Recent Speakers</span> -->
+          <span class="potm-scs-text4">Most Recent Speakers</span>
           <div class="potm-scs-container">
-          <div class="potm-scs-img-container">
-              <img class="potm-scs-images" src="./images/Kels.jpg"/><span class="potm-scs-image-names">Kelsey Iverson</span>
+            <div class="potm-scs-img-container">
+                <img class="potm-scs-images" src="./images/Kels.jpg"/>
+                <span class="potm-scs-image-names">Kelsey <br> Iverson</span>
+            </div>
+            <div class="potm-scs-img-container">
+                <img class="potm-scs-images" src="./images/Ed.jpg"/>
+                <span class="potm-scs-image-names">Edward <br> Weymouth</span>
+            </div>
+            <div class="potm-scs-img-container">
+                <img class="potm-scs-images" src="./images/Nora.jpg"/>
+                <span class="potm-scs-image-names">Nora <br> McDougall-Collins</span>
+            </div>
+            <div class="potm-scs-img-container">
+                <img class="potm-scs-images" src="./images/Kirk.jpg"/>
+                <span class="potm-scs-image-names">Kirk <br> Richardson</span>
+            </div>
           </div>
-          <div class="potm-scs-img-container">
-              <img class="potm-scs-images" src="./images/Ed.jpg"/><span class="potm-scs-image-names">Edward Weymouth</span>
-          </div>
-          <div class="potm-scs-img-container">
-              <img class="potm-scs-images" src="./images/Nora.jpg"/><span class="potm-scs-image-names">Nora McDougall-Collins</span>
-          </div>
-          <div class="potm-scs-img-container">
-              <img class="potm-scs-images" src="./images/Kirk.jpg"/><span class="potm-scs-image-names">Kirk Richardson</span>
-          </div>
-        </div>
         </section>              
       </main>
     </div>
